--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "mongodb": "^4.8.1",
     "next": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hooks-form": "^2.0.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
